<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_customer"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/home_group"
        android:checkableBehavior="single">
        <item
...
                <item
                    android:id="@+id/navigation_food_list"
                    android:icon="@drawable/ic_list"
                    android:title="@string/title_food_list" />

                <item
                    android:id="@+id/navigation_foodStall"
                    android:icon="@drawable/ic_food_stall"
                    android:title="@string/title_food_stall" />

                <item
                    android:id="@+id/navigation_categories"
                    android:icon="@drawable/ic_categories"
...
