<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="8dp"
        android:id="@+id/cartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_above="@+id/group_place_holder"
        android:visibility="gone"
        android:layout_width="match_parent"
...
