...
    <string name="login_failed">"Login failed"</string>
    <string name="order">Order</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_food_list">Food List</string>
    <string name="title_food_stall">Food Stalls</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="recommended">Recommended</string>
...
